[package]
name = "openmodel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-health = "0.9.2"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
axum = "0.7"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"
config = "0.14"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
bytes = "1.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "tracing-log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-opentelemetry = "=0.22"
opentelemetry = { version = "=0.21", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "=0.14"

[build-dependencies]
prost-build = "0.11.9"
tonic-build = "0.9.2"